# dcs0896x-skeletons

./: CMakeLists.txt  README.md  README.rst
cmake/: FindATB.cmake  FindGLI.cmake  FindGLM.cmake  FindOGLplus.cmake  SetupCompilerPost.cmake  SetupCompilerPre.cmake  SetupFunctions.cmake  SetupPackaging.cmake  SetupProjectOptions.cmake  SetupProjectPaths.cmake  SetupProjectVariables.cmake  SetupTestConfig.cmake
inc/support/: application.hpp  application.inl  chrono.hpp  chrono_io.hpp  printable.hpp  printable.inl  ratio_io.hpp  refcounted.hpp  string.hpp  thread.hpp  trace.hpp  type_info.hpp  window.hpp
inc/win/: application.hpp  application.inl  utilities.hpp  utilities.inl
inc/win/window/: manager.hpp
proto/: proto.glsl  proto.h  proto.hlsl  proto.hpp  proto.inl
src/lib/: CMakeLists.txt
src/lib/support/: CMakeLists.txt  application.cpp  chrono.cpp  chrono_io.cpp  printable.cpp  refcounted.cpp  string.cpp  thread.cpp  trace.cpp  type_info.cpp  window.cpp
src/lib/support/test/: CMakeLists.txt  application.cpp  chrono.cpp  printable.cpp  refcounted.cpp  thread.cpp  trace.cpp  type_info.cpp
src/lib/win/: CMakeLists.txt  application.cpp  main.cpp  utilities.cpp
src/lib/win/test/: CMakeLists.txt  application.cpp
src/lib/win/window/: manager.cpp
